# kikito-spreadsheet

./: .gitignore  Cargo.toml  README.md  devlog.md  plan.md
src/: app.rs  error.rs  event.rs  main.rs  table.rs  ui.rs
src/reader/: csv.rs  mod.rs  xls.rs  xlsx.rs
src/writer/: csv.rs  mod.rs  xlsx.rs
