[package]
name = "excel-tui"
version = "0.1.0"
edition = "2021"
description = "TUI for reading Excel and CSV files in the terminal"

[[bin]]
name = "excel-tui"
path = "src/main.rs"

[dependencies]
ratatui   = "0.29"
crossterm = "0.28"
calamine  = "0.26"
csv       = "1.3"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip     = true
opt-level = 3
